fix spacing of css box

--- a/public/homestyle.css
+++ b/public/homestyle.css
@@ -174,7 +174,7 @@ background-color: rgba(255, 255, 255, 0.429)  !important; /* White background co
     flex-direction: column;
     float: left;
     margin-right: 20px; /* Add right margin */
-    margin-top: -250px;
+    margin-top: -270px;
     margin-left: 20px;
     font-family: 'Roboto', sans-serif;
     margin-bottom: 100px;
